Add google analytics and design progress

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-	<img class='logo' src="/images/logo-type.svg" alt="" height="80">
+	<a href="/"><img class='logo' src="/images/flour-de-lis-cakes-type.svg" alt="" height="80"></a>
 	<!-- <p class='brand'> -->
 		<!-- <a href='/'>Sweet Dreams Dessert Lounge</a> -->
 	<!-- </p> -->
