--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,5 +1,7 @@
 <nav class='nav'>
 	<ul class='nav-links'>
+		<li class='nav-link--logo'><a class='no-underline' href='/'><img class='logo' src="/images/logo-type.svg"></a></li>
+		<li class='nav-link--icon'><a class='no-underline' href="/"> <img class='home-icon' src="/images/icon-home.svg" alt="Home icon"></a></li>
 		<li class='nav-link' ><a href='/gallery'>Gallery</a></li>
 		<li class='nav-link' ><a href='#'>Services</a></li>
 		<li class='nav-link' ><a href='#'>Testimonials</a></li>
