--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -1,10 +1,10 @@
 <div class='profile-wrapper'>
+	<img class='profile-cta narrow-screen' src="/images/profile-cta.svg" height='45' alt="Header: Meet the Owner">
 	<div class="profile">
-		<img class='profile-meet-the-owner' src="/images/profile-meet-the-owner.svg" height='45' alt="Header: Meet the Owner">
-		<img class='profile-portrait' src="/images/profile-portrait.jpg" alt="Portrait of the owner, Betty Mendez">
-		<div class="profile-content">
-			<h4 class="profile-name">Betty Mendez</h4>
-			<p class="profile-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat blanditiis suscipit beatae quaerat? Enim saepe iste provident debitis perspiciatis dolor.</p>
+		<div class="profile-id">
+			<img class='profile-portrait' src="/images/profile-portrait.jpg" height="200" alt="Portrait of the owner, Betty Mendez">
+			<h2 class="profile-name">Betty Mendez</h2>
 		</div>
+		<p class="profile-text"><img class='profile-cta wide-screen' src="/images/profile-cta.svg" height='45' alt="Header: Meet the Owner">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas dignissimos consectetur rerum, inventore, voluptatem doloremque deserunt repellendus totam blanditiis, quis sed corrupti laborum. Sunt odio, provident excepturi veritatis eaque quis nostrum suscipit voluptates harum dignissimos ad odit culpa nobis obcaecati praesentium dicta amet eius nam est doloremque similique. Deleniti, nihil cupiditate dolorem rerum repudiandae tempora? Reiciendis tempora ipsam adipisci magnam harum provident libero ad esse. Quia dignissimos aut commodi harum laborum, impedit quisquam voluptas quibusdam ab, quos facilis repudiandae aperiam sequi dolorum aspernatur quam. Commodi corrupti amet voluptates libero labore sequi ad ea praesentium in aperiam iste dolore, est eaque!</p>
 	</div>
 </div>
