--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,8 @@
 <html>
 	{% include head.html %}
 	<body>
-		{% include header.html %}		
+		{% include header-sticky.html %}		
+		{% include header-normal.html %}		
 		{{ content }}
 	</body>
 	{% include footer.html %}
