--- a/css/main.scss
+++ b/css/main.scss
@@ -3,9 +3,11 @@
 
 @import 	'normalize',
 			'variables',
+			'mixins',
 			'placeholders',
 			'typography',
 			'layout',
+			'header',
 			'panels',
 			'gallery',
 			'profile',
