--- a/_sass/_panels.scss
+++ b/_sass/_panels.scss
@@ -14,19 +14,17 @@
 	align-items: center;
 	font-size: 115%;
 	padding: 2.5rem;
-	min-height: 55vh;
+	min-height: 51vh;
 	color: white;
 	text-align: center;
 	background-size: cover;
 	background-position: center;
-	text-shadow: 0 2px 5px rgba(0, 0, 0, .45);
+	text-shadow: 0 1px 5px rgba(0, 0, 0, .45);
 
 	&-text {
 		max-width: 700px;
 		margin-top: 0;
-		font-size: 1.1em;
-		line-height: 1.7;
-	}
+		font-size: 1.1em;}
 }
 
 .panelSplit {
@@ -59,7 +57,6 @@
 
 	&-text {
 		font-size: 1.1em;
-		line-height: 1.7;
 		text-align: center;
 		margin-top: 0;}
 
